--- a/mc/mc/mc.vcxproj
+++ b/mc/mc/mc.vcxproj
@@ -147,6 +147,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="micro.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="micro.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
