--- a/mc/mc/mc.vcxproj.filters
+++ b/mc/mc/mc.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="micro.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="operations.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="micro.h">
