--- a/mc/mc/mc.vcxproj
+++ b/mc/mc/mc.vcxproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="micro.cpp" />
+    <ClCompile Include="operations.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="micro.h" />
